--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
-	<script src="./javascripts/angular.min.js"></script>
 </head>
 <body>
-	Hello
+	<form action="/upload" method="POST" enctype="multipart/form-data">
+		<input type='file' name='file'/>
+		<div></div>
+		<input type='submit'/>
+	</form>
 </body>
 </html>
