--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-  <script src="/javascripts/Register.js"></script>
+  <script src="/javascripts/register.js"></script>
 </head>
 
 <body ng-app="register" ng-controller="RegisterCtrl" style="overflow:hidden">
@@ -58,7 +58,7 @@
         <div class="form-group">
           <div class="input-group">
             <span class="input-group-addon" id="sizing-addon2">confirm password</span>
-        <input type="password" class="form-control" placeholder="confirm password" aria-describedby="basic-addon2">
+        <input type="password" class="form-control" placeholder="confirm password" aria-describedby="basic-addon2" ng-model="passwordConfirm">
       </div>
         </div>
     <button type="submit" class="btn btn-primary">Register</button>
