--- a/frontend/uploaddemo.html
+++ b/frontend/uploaddemo.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-</head>
+<!-- saved from url=(0036)http://54.183.198.80/uploaddemo.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script type="text/javascript" src="chrome-extension://aadgmnobpdmgmigaicncghmmoeflnamj/ng-inspector.js"></script></head>
 <body>
-	<form action="/upload" method="POST" enctype="multipart/form-data">
-		<input type='file' name='file'/>
+	<form action="http://54.183.198.80/upload" method="POST" enctype="multipart/form-data">
+		File: <input type="file" name="file">
+		User: <input type="text" name="email">
+		Group: <input type="text" name="group_name">
 		<div></div>
-		<input type='submit'/>
+		<input type="submit">
 	</form>
+	<br>
 	<div>Download Demo:</div>
-	file_id: <input type="text" id="file_id"/>
+	file_id: <input type="text" id="file_id">
 	<button onclick="download()">Download</button>
 <script>
 	function download(){
@@ -17,9 +20,9 @@
 		if(!file_id){
 		alert("file_id is required")
 		} else {
-			window.location.href = "/download/"+file_id;
+			window.location.href = "http://54.183.198.80/download/"+file_id;
 		}
 	}
 </script>
-</body>
-</html>
+
+</body></html>
