Added upload page

--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -1,25 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>jBox</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/stylesheets/style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="/images/favicon.ico"/>
+  <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+  <script src="/javascripts/groups.js"></script>
 </head>
-<body>
-	<form action="/upload" method="POST" enctype="multipart/form-data">
-		<input type='file' name='file'/>
-		<div></div>
-		<input type='submit'/>
-	</form>
-	<div>Download Demo:</div>
-	file_id: <input type="text" id="file_id"/>
-	<button onclick="download()">Download</button>
-<script>
-	function download(){
-		var file_id = document.getElementById("file_id").value;
-		if(!file_id){
-		alert("file_id is required")
-		} else {
-			window.location.href = "/download/"+file_id;
-		}
-	}
-</script>
+
+<body ng-app="groups" ng-controller="GroupsCtrl" style="overflow:hidden">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#" style="font-size:35px; padding-left:50px;"><b>jBox</b></a>
+      </div>
+    </div><!--/.container-fluid -->
+  </nav>
+
+  <div class="row" style="padding-top:50px;">
+      <div class="col-md-8 col-md-offset-5">
+    <p style="font-size:60px; font-family:Oxygen;">
+      <b>jBox</b>
+    </p>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col-md-8 col-md-offset-3">
+    <p style="font-size:40px;">Easily share and annotate screenshots</p>
+    </div>
+  </div>
+
+  <div class="row" style="padding-top:40px;">
+    <div class="col-md-2 col-md-offset-2" style="padding-top:60px">
+      <p style="font-size:35px;">Download the program here!</p>
+  <button type="button" class="btn btn-info">Download</button>
+
+    </div>
+
+   <form action="http://54.183.198.80/upload" method="POST" enctype="multipart/form-data">
+      <div class="col-md-4 col-md-offset-1">
+          <div class="form-group">
+            <div class="input-group">
+              <label for="file">File:</label>            
+              <input type="file" name="file">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <label for="email">User:</label>
+              <input type="text" class="form-control" name="email">
+            </div>
+          </div>  
+          <div class="form-group">
+            <div class="input-group">
+              <label for="group_name">Group:</label>
+              <input type="text" class="form-control" name="group_name">
+            </div>
+          </div>
+      <input type="submit">
+    </form>
+  </div>
+  </div>
 </body>
+
 </html>
