changed overflow to overflow-x

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
   <script src="/javascripts/register.js"></script>
 </head>
 
-<body ng-app="register" ng-controller="RegisterCtrl" style="overflow:hidden">
+<body ng-app="register" ng-controller="RegisterCtrl" style="overflow-x:hidden">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -64,6 +64,8 @@
     <button type="submit" class="btn btn-primary">Register</button>
     <p ng-show="error === true" style="font-size:20px; padding-top:10px; color:red;"> {{ errorMessage }} </p>
     <p style="padding-top:40px; font-size:40px;"> Or login <a href="login.html">here!</a></p>
+    <p style="padding-top:40px; font-size:40px;"> Or upload <a href="upload.html">here!</a></p>
+
    </form>
   </div>
   </div>	
