--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
   </script>
 </head>
 
-<body ng-app="login" ng-controller="LoginCtrl" style="overflow:hidden">
+<body ng-app="login" ng-controller="LoginCtrl" style="overflow-x:hidden">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
