--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -11,7 +11,7 @@
   <script src="/javascripts/groups.js"></script>
 </head>
 
-<body ng-app="groups" ng-controller="GroupsCtrl" style="overflow:hidden">
+<body ng-app="groups" ng-controller="GroupsCtrl" style="overflow-x:hidden">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
