--- a/frontend/home.html
+++ b/frontend/home.html
@@ -11,7 +11,7 @@
   <script src="/javascripts/angularJS.js"></script>
 </head>
 
-<body ng-app="jBox" style="overflow:hidden">
+<body ng-app="jBox" style="overflow-x:hidden">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -56,6 +56,8 @@
         </div>
     <button type="button" class="btn btn-primary">Register</button>
     <p style="padding-top:40px; font-size:20px;"> Or login <a href="">here!</a></p>
+    <p style="padding-top:40px; font-size:20px;"> Or upload <a href="">here!</a></p>
+
   </div>
   </div>
 
